# rewal

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  llm.md
.github/workflows/: ci.yml
benches/: wal.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_append_replay.rs  fuzz_decode_batch.rs  fuzz_recovery_after_corruption.rs
src/: crc.rs  encoding.rs  error.rs  event.rs  hooks.rs  lib.rs  mmap.rs  options.rs  queue.rs  replay.rs  state.rs  stats.rs  storage.rs  sys.rs  wal.rs  writer.rs
src/sys/: unix.rs  windows.rs
